--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,13 @@ body.found {
   width: 100%;
   max-width: 500px;
   padding: 30px;
-  background: #dce5fc;
+  background: #edf2fe;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
 display: flex;
 flex-direction: column;
-justify-content: start;
+justify-content: center;
+text-align: center;
 }
 
 input[type="text"] {
@@ -62,7 +63,7 @@ input[type="text"] {
 
   input[type="text"] {
     padding: 8px;
-    margin-bottom: 8px;
+    margin-bottom: 28px;
   }
 
   #result {
@@ -72,4 +73,13 @@ input[type="text"] {
 
 h1 {
 color: brown;
+}
+.importantInfo {
+  background-color: rgb(222, 252, 233);
+  color:rgb(118, 22, 22);
+  border: 1px dotted rgb(118, 22, 22);
+}
+
+a{ color: rgb(109, 40, 151);
+margin-left: auto;
 }
